--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -83,7 +83,7 @@ body {
   padding: 11px 20px !important;
 }
 .header i[class^='el-icon'] {
-  color: $text-color;
+  color: #fff;
 }
 #app .clearFixed:after {
   content: '';
